setup the tests

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "Fabricio Silva <fabricionaweb@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "live-server"
+    "start": "live-server",
+    "test": "uvu --ignore mock"
   },
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "uvu": "^0.5.1"
   }
 }
